testing/tests/src/test/resources/golden/RuntimeTest/invalid-thread-checker-missing-class.golden.txt
error: Invalid value: Unable to find class test.NonExistentThreadChecker
Encountered:
  here: Option yatagan.threadCheckerClassName = test.NonExistentThreadChecker
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~